# yttoc

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ask.html  ask.html.md  cache.html  cache.html.md  core.html  core.html.md  fetch.html  fetch.html.md  index.html  index.html.md  llm.html  llm.html.md  llms.txt  map.html  map.html.md  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  summarize.html  summarize.html.md  toc.html  toc.html.md  xscript.html  xscript.html.md
.github/workflows/: deploy.yaml  fetch-smoke.yaml  test.yaml
docs/: architecture-simplification-review.md  architecture-simplification.md  implementation-plan.md  llm-structured-output-decision.md
docs/superpowers/plans/: 2026-04-17-yttoc-ask.md  2026-04-19-pydantic-phase2-segment.md  2026-04-19-pydantic-phase2b-normalized-section.md  2026-04-19-pydantic-phase2c-meta.md  2026-04-20-cli-render-and-test-cleanup.md  2026-04-20-cli-render-extraction.md
docs/superpowers/specs/: 2026-04-16-yttoc-ask-design.md  2026-04-19-pydantic-phase2-segment-design.md  2026-04-19-pydantic-phase2b-normalized-section-design.md  (+2 more)
nbs/: 00_core.ipynb  01_fetch.ipynb  02_xscript.ipynb  03_toc.ipynb  04_summarize.ipynb  05_map.ipynb  06_ask.ipynb  07_cache.ipynb  08_llm.ipynb  index.ipynb  nbdev.yml  sidebar.yml
scripts/: normalize_notebooks.py
settings/: _modidx.py  core.py
site_libs/bootstrap/: bootstrap-368be6e10e2a2b62bd7965d9a2264c3e.min.css
yttoc/: _modidx.py  ask.py  cache.py  core.py  fetch.py  llm.py  map.py  summarize.py  toc.py  xscript.py
(+3 files in other folders)
