[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "yttoc"
dynamic = ["version"]
description = "YouTube Transcript to structured Table of Contents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Hiroshi Doyu", email = "hiroshi.doyu@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python', 'youtube', 'transcript', 'toc']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ["yt-dlp", "fastcore", "openai"]

[project.urls]
Repository = "https://github.com/doyu/yttoc"
Documentation = "https://doyu.github.io/yttoc"

[project.scripts]
yttoc-fetch = "yttoc.fetch:yttoc_fetch"
yttoc-list = "yttoc.fetch:yttoc_list"
yttoc-raw = "yttoc.xscript:yttoc_raw"
yttoc-toc = "yttoc.toc:yttoc_toc"

[project.entry-points.nbdev]
yttoc = "yttoc._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "yttoc.__version__"}

[tool.setuptools.packages.find]
include = ["yttoc"]

[tool.nbdev]
doc_path = "_docs"
lib_path = "yttoc"
nbs_path = "nbs"
recursive = true
tst_flags = "notest network slow"
put_version_in_init = true
black_formatting = false
